--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run dr:surge",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dr:surge": "node dr-surge.js"
   },
   "eslintConfig": {
     "extends": [
